<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/backgroundImage"
        android:scaleType="centerCrop"
        android:src="@drawable/ba" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:layout_marginVertical="100dp"
            android:padding="2dp"
            android:scaleType="centerCrop"
            android:src="@drawable/userimage" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/user_login_style"
            android:drawableStart="@drawable/ic_baseline_mail_outline_24"
            android:drawableLeft="@drawable/ic_baseline_mail_outline_24"
            android:drawablePadding="10dp"
            android:hint="E-mail"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="@dimen/editTextPaddingH"
            android:paddingVertical="@dimen/editTextPaddingV"
            />

        <EditText

            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/user_login_style"
            android:drawableStart="@drawable/ic_baseline_vpn_key_24"
            android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
            android:drawablePadding="10dp"
            android:hint="Password"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/editTextPaddingH"
            android:paddingVertical="@dimen/editTextPaddingV" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/login_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_login_style"
            android:paddingHorizontal="30dp"
            android:paddingVertical="@dimen/editTextPaddingV"
            android:text="@string/login_now" />


    </LinearLayout>

    <TextView
        android:id="@+id/login_createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:padding="20dp"
        android:text="@string/create_account"
        android:textColor="@android:color/white" />
</RelativeLayout>