<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".SignUp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/backgroundImage"
        android:scaleType="centerCrop"
        android:src="@drawable/ba" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="40dp">

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="8" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="center_vertical"
            android:text="@string/connect_with_us"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="6" />

        <EditText
            android:id="@+id/signUp_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/user_login_style"
            android:drawableStart="@drawable/ic_baseline_perm_identity_24"
            android:drawableLeft="@drawable/ic_baseline_perm_identity_24"
            android:drawablePadding="10dp"
            android:hint="Name"
            android:paddingHorizontal="@dimen/editTextPaddingH"
            android:paddingVertical="@dimen/editTextPaddingV" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/signUp_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/user_login_style"
            android:drawableStart="@drawable/ic_baseline_mail_outline_24"
            android:drawableLeft="@drawable/ic_baseline_mail_outline_24"
            android:drawablePadding="10dp"
            android:hint="E-mail"
            android:paddingHorizontal="@dimen/editTextPaddingH"
            android:paddingVertical="@dimen/editTextPaddingV" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/signUp_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/user_login_style"
            android:drawableStart="@drawable/ic_baseline_vpn_key_24"
            android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
            android:drawablePadding="10dp"
            android:hint="Enter Password"
            android:paddingHorizontal="@dimen/editTextPaddingH"
            android:paddingVertical="@dimen/editTextPaddingV" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/signUp_password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/user_login_style"
            android:drawableStart="@drawable/ic_baseline_vpn_key_24"
            android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
            android:drawablePadding="10dp"
            android:hint="Confirm Password"
            android:paddingHorizontal="@dimen/editTextPaddingH"
            android:paddingVertical="@dimen/editTextPaddingV" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/user_login_style">

            <fragment
                android:id="@+id/activity_settings"
                android:name="com.example.e_commerce.SettingsFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </FrameLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="3" />

        <Button
            android:id="@+id/signUp_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_login_style"
            android:paddingHorizontal="30dp"
            android:paddingVertical="@dimen/editTextPaddingV"
            android:text="@string/sign_up" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="3" />
    </LinearLayout>
</RelativeLayout>